--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CallSpy</string>
-    <string name="hello_world">Hello World!</string>
-    <string name="accessibility_service_name">CallSpy Accessibility Service</string>
-    <string name="accessibility_service_description">Detects WhatsApp and VoIP calls for automatic recording</string>
+    <!-- Existing strings here -->
+
+    <!-- Additional strings for FileManagerActivity -->
+    <string name="file_manager_title">Recordings</string>
+    <string name="no_recordings">No recordings found</string>
+    <string name="play_recording">Play</string>
+    <string name="stop_playback">Stop</string>
+    <string name="delete_recording">Delete</string>
+    <string name="share_recording">Share</string>
+    <string name="recordings_list_header">Recorded Calls</string>
+    <string name="error_loading_recordings">Error loading recordings</string>
+    <string name="error_decrypting_file">Error decrypting file</string>
+    <string name="error_playing_audio">Error playing audio</string>
+    <string name="confirm_delete">Delete recording?</string>
+    <string name="confirm_delete_message">Are you sure you want to delete this recording?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="recording_date">Date: %s</string>
+    <string name="recording_type">Type: %s</string>
+    <string name="recording_number">Number: %s</string>
+    <string name="recording_duration">Duration: %s</string>
 </resources>
